# osm2pgsql

./: .gitignore  CMakeLists.txt  FindLibGeos.cmake  FindLibProj.cmake  Makefile.am  cmake-config.h.in  configure.ac  expire-tiles.cpp  expire-tiles.hpp  middle-mysql.c  middle-mysql.h  middle-pgsql.c  middle-pgsql.cpp  mysql.c  mysql.h  options.cpp  osm2pgsql.c  osmdata.cpp  osmtypes.h  osmtypes.hpp  output-gazetteer.c  output-helper.c  output-helper.h  output-multi.cpp  output-mysql.c  output-mysql.cpp  output-mysql.h  output-mysql.hpp  output-pgsql.c  output-sql.cpp  output-sql.hpp  output.cpp  output.h  pgsql.c  pgsql.h  pgsql.hpp  style-file.c  style-file.h  table-mysql.cpp  table-mysql.hpp  (+7 more)
cmake/: config.h.in
docs/: mysql.md  pgsql.md  spatialite.md  sql-backends.md
tests/: test-hstore-match-only.cpp  test-options-parse.cpp  test-options-projection.cpp  test-output-pgsql-area.cpp  test-output-pgsql-schema.cpp  test-output-pgsql-tablespace.cpp  test-output-pgsql-z_order.cpp  test-output-pgsql.cpp
